maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:30: error: not found: value dirpref
  dirpref=Direction.NORTH
  ^PledgeMaze:33: error: not found: value isDirectionFree
      if (isDirectionFree(dirpref) and dirpref==Direction.EAST) {dirpref=Direction.SOUTH;setDirection(Direction.SOUTH)}
          ^PledgeMaze:33: error: not found: value dirpref
      if (isDirectionFree(dirpref) and dirpref==Direction.EAST) {dirpref=Direction.SOUTH;setDirection(Direction.SOUTH)}
                          ^PledgeMaze:33: error: not found: value dirpref
      if (isDirectionFree(dirpref) and dirpref==Direction.EAST) {dirpref=Direction.SOUTH;setDirection(Direction.SOUTH)}
                                       ^PledgeMaze:33: error: not found: value dirpref
      if (isDirectionFree(dirpref) and dirpref==Direction.EAST) {dirpref=Direction.SOUTH;setDirection(Direction.SOUTH)}
                                                                 ^PledgeMaze:34: error: not found: value isDirectionFree
      if (isDirectionFree(dirpref) and dirpref==Direction.WEST) {dirpref=Direction.NORTH;setDirection(Direction.NORTH)}
          ^PledgeMaze:34: error: not found: value dirpref
      if (isDirectionFree(dirpref) and dirpref==Direction.WEST) {dirpref=Direction.NORTH;setDirection(Direction.NORTH)}
                          ^PledgeMaze:34: error: not found: value dirpref
      if (isDirectionFree(dirpref) and dirpref==Direction.WEST) {dirpref=Direction.NORTH;setDirection(Direction.NORTH)}
                                       ^PledgeMaze:34: error: not found: value dirpref
      if (isDirectionFree(dirpref) and dirpref==Direction.WEST) {dirpref=Direction.NORTH;setDirection(Direction.NORTH)}
                                                                 ^PledgeMaze:35: error: not found: value isDirectionFree
      if (isDirectionFree(dirpref) and dirpref==Direction.NORTH) {dirpref=Direction.EAST;setDirection(Direction.EAST)}
          ^PledgeMaze:35: error: not found: value dirpref
      if (isDirectionFree(dirpref) and dirpref==Direction.NORTH) {dirpref=Direction.EAST;setDirection(Direction.EAST)}
                          ^PledgeMaze:35: error: not found: value dirpref
      if (isDirectionFree(dirpref) and dirpref==Direction.NORTH) {dirpref=Direction.EAST;setDirection(Direction.EAST)}
                                       ^PledgeMaze:35: error: not found: value dirpref
      if (isDirectionFree(dirpref) and dirpref==Direction.NORTH) {dirpref=Direction.EAST;setDirection(Direction.EAST)}
                                                                  ^PledgeMaze:36: error: not found: value isDirectionFree
      if (isDirectionFree(dirpref) and dirpref==Direction.SOUTH) {dirpref=Direction.WEST;setDirection(Direction.WEST)}
          ^PledgeMaze:36: error: not found: value dirpref
      if (isDirectionFree(dirpref) and dirpref==Direction.SOUTH) {dirpref=Direction.WEST;setDirection(Direction.WEST)}
                          ^PledgeMaze:36: error: not found: value dirpref
      if (isDirectionFree(dirpref) and dirpref==Direction.SOUTH) {dirpref=Direction.WEST;setDirection(Direction.WEST)}
                                       ^PledgeMaze:36: error: not found: value dirpref
      if (isDirectionFree(dirpref) and dirpref==Direction.SOUTH) {dirpref=Direction.WEST;setDirection(Direction.WEST)}
                                                                  ^PledgeMaze:39: error: not found: value dirpref
    if (getDirection==dirpref && !estFaceMur()) {
                      ^